# biobb_md_workflows

./: CHANGELOG.md  CITATION.cff  CLAUDE.md  README.md  environment.yml  pyproject.toml
.github/workflows/: docs.yml
biobb_md_workflows/: README.md  __init__.py
biobb_md_workflows/common/: __init__.py
biobb_md_workflows/ligand_parameterization/: README.md  ligand_parameterization.py
biobb_md_workflows/md_gromacs/: README.md  md_gromacs.py
biobb_md_workflows/protein_preparation/: README.md  protein_preparation.py
biobb_md_workflows/traj_postprocessing/: README.md  traj_postprocessing.py
data/custom_parameters/: HEM.frcmod
docs/: conf.py  environment.yml  fair4rs_assessment.md  index.md  installation.md  tutorial.md
docs/workflows/: ligand_parameterization.md  md_gromacs.md  protein_preparation.md  traj_postprocessing.md
notebooks/: biobb_md_workflows_colab_tutorial.ipynb  colab_environment.yml  local_environment.yml  notebook_tutorial.ipynb
tests/ligand_parameterization/: run.sl
tests/md_gromacs/: run.sl
tests/protein_preparation/: input.yml  run.sl
tests/traj_postprocessing/: run.sl
