[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biobb_md_workflows"
version = "0.1.0"
requires-python = "==3.12"
dependencies = [
    "biobb_common>=5.2.2",
    "biobb_structure_utils>=5.2.1",
    "biobb_model>=5.2.1",
    "biobb_io>=5.2.3",
    "biobb_pdb_tools>=5.2.1",
    "propka>=3.5.1",
    "mdanalysis==2.10.0",
    "biopython==1.87",
    "pyyaml",
    # NBDSoftware forks — required by md_gromacs, traj_postprocessing.
    # Pinned to fork-namespaced tags (nbd-*) so installs are reproducible and
    # don't collide with upstream's future tags. Bump these when re-tagging.
    "biobb_gromacs @ git+https://github.com/NBDsoftware/biobb_gromacs@nbd-5.3.0",
    "biobb_analysis @ git+https://github.com/NBDsoftware/biobb_analysis@nbd-5.3.0",
    # Required by md_gromacs, ligand_parameterization, protein_preparation.
    "biobb_amber>=5.2.1",
    "biobb_chemistry>=5.2.1",
]

[project.scripts]
md_gromacs                = "biobb_md_workflows.md_gromacs.md_gromacs:main"
ligand_parameterization   = "biobb_md_workflows.ligand_parameterization.ligand_parameterization:main"
protein_preparation       = "biobb_md_workflows.protein_preparation.protein_preparation:main"
traj_postprocessing       = "biobb_md_workflows.traj_postprocessing.traj_postprocessing:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["biobb_md_workflows*"]
